Add  property that collection of non-comment block

--- a/test/test.html
+++ b/test/test.html
@@ -1,3 +1,5 @@
+<p>content1</p>
+
 <!-- divide:head -->
 <p>head</p>
 <!-- enddivide -->
@@ -5,3 +7,5 @@
 <!-- divide:body -->
 <p>body</p>
 <!-- enddivide -->
+
+<p>content2</p>
